Read msg from repo
Change-Id: Idb6f660aa79dc9d836244c10054a0cd02e078464