@@ -14,24 +14,32 @@
 
 package com.googlesource.gerrit.plugins.messageoftheday;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
-
+import com.google.common.base.MoreObjects;
 import com.google.common.base.Strings;
+import com.google.gerrit.entities.BranchNameKey;
+import com.google.gerrit.entities.Project;
 import com.google.gerrit.extensions.annotations.PluginData;
 import com.google.gerrit.extensions.annotations.PluginName;
 import com.google.gerrit.extensions.restapi.Response;
 import com.google.gerrit.extensions.restapi.RestReadView;
 import com.google.gerrit.server.config.ConfigResource;
+import com.google.gerrit.server.config.GerritServerConfig;
 import com.google.gerrit.server.config.SitePaths;
+import com.google.gerrit.server.git.GitRepositoryManager;
+import com.google.gerrit.server.git.meta.VersionedMetaData;
 import com.google.inject.Inject;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
+import java.util.concurrent.ExecutionException;
 import org.eclipse.jgit.errors.ConfigInvalidException;
+import org.eclipse.jgit.lib.CommitBuilder;
+import org.eclipse.jgit.lib.Config;
+import org.eclipse.jgit.lib.ObjectId;
+import org.eclipse.jgit.lib.Repository;
 import org.eclipse.jgit.storage.file.FileBasedConfig;
 import org.eclipse.jgit.util.FS;
 import org.slf4j.Logger;
@@ -42,48 +50,76 @@ public class GetMessage implements RestReadView<ConfigResource> {
   private static final String KEY_ID = "id";
   private static final String KEY_STARTS_AT = "startsAt";
   private static final String KEY_EXPIRES_AT = "expiresAt";
+  private static final String SECTION_PROJECT = "project";
+  private static final String KEY_NAME = "name";
+  private static final String KEY_BRANCH = "branch";
+  private static final String KEY_CFG = "config";
 
   private static final SimpleDateFormat DATE_FORMAT = new SimpleDateFormat("yyyyMMdd:HHmm");
 
   private static final Logger log = LoggerFactory.getLogger(GetMessage.class);
 
-  private final File cfgFile;
+  private final GitRepositoryManager repoManager;
+  private final Config gerritCfg;
+  private final String pluginName;
+  private final SitePaths sitePaths;
   private final Path dataDirPath;
+  private final String pluginCfgName;
+  private final HtmlMessageCache htmlMessageCache;
 
-  private volatile FileBasedConfig cfg;
+  private Project.NameKey project;
+  private ObjectId branchObjId;
+  private volatile Config mtodCfg;
 
   @Inject
   public GetMessage(
-      @PluginName String pluginName, @PluginData Path dataDirPath, SitePaths sitePaths) {
+      GitRepositoryManager repoManager,
+      @GerritServerConfig Config gerritCfg,
+      @PluginName String pluginName,
+      @PluginData Path dataDirPath,
+      SitePaths sitePaths,
+      HtmlMessageCache htmlMessageCache) {
+    this.repoManager = repoManager;
+    this.gerritCfg = gerritCfg;
+    this.pluginName = pluginName;
     this.dataDirPath = dataDirPath;
-    this.cfgFile = sitePaths.etc_dir.resolve(pluginName + ".config").toFile();
+    this.sitePaths = sitePaths;
+    this.htmlMessageCache = htmlMessageCache;
+    this.pluginCfgName = pluginName + ".config";
   }
 
   @Override
   public Response<MessageOfTheDayInfo> apply(ConfigResource rsrc) {
     MessageOfTheDayInfo motd = new MessageOfTheDayInfo();
-    cfg = new FileBasedConfig(cfgFile, FS.DETECTED);
-    try {
-      cfg.load();
-    } catch (ConfigInvalidException | IOException e) {
-      return null;
+
+    loadFromProject();
+
+    if (mtodCfg == null) {
+      FileBasedConfig dataDirMtodCfg =
+          new FileBasedConfig(sitePaths.etc_dir.resolve(pluginCfgName).toFile(), FS.DETECTED);
+      try {
+        dataDirMtodCfg.load();
+      } catch (ConfigInvalidException | IOException e) {
+        return null;
+      }
+      mtodCfg = dataDirMtodCfg;
     }
 
-    motd.id = cfg.getString(SECTION_MESSAGE, null, KEY_ID);
+    motd.id = mtodCfg.getString(SECTION_MESSAGE, null, KEY_ID);
     if (Strings.isNullOrEmpty(motd.id)) {
       log.warn("id not defined, no message will be shown");
       return Response.none();
     }
 
     try {
-      motd.expiresAt = DATE_FORMAT.parse(cfg.getString(SECTION_MESSAGE, null, KEY_EXPIRES_AT));
+      motd.expiresAt = DATE_FORMAT.parse(mtodCfg.getString(SECTION_MESSAGE, null, KEY_EXPIRES_AT));
     } catch (ParseException | NullPointerException e) {
       log.warn("expiresAt not defined, no message will be shown");
       return Response.none();
     }
 
     try {
-      String startsAt = cfg.getString(SECTION_MESSAGE, null, KEY_STARTS_AT);
+      String startsAt = mtodCfg.getString(SECTION_MESSAGE, null, KEY_STARTS_AT);
       motd.startsAt = Strings.isNullOrEmpty(startsAt) ? new Date() : DATE_FORMAT.parse(startsAt);
     } catch (ParseException e) {
       motd.startsAt = new Date();
@@ -95,14 +131,79 @@ public class GetMessage implements RestReadView<ConfigResource> {
     }
 
     try {
-      motd.html = new String(Files.readAllBytes(dataDirPath.resolve(motd.id + ".html")), UTF_8);
-    } catch (IOException e1) {
+      if (project != null && branchObjId != null) {
+        motd.html =
+            htmlMessageCache.getHtmlMsg(
+                FileNameKey.create(project, branchObjId, motd.id + ".html"));
+      } else {
+        motd.html = Files.readString(dataDirPath.resolve(motd.id + ".html"));
+      }
+    } catch (IOException | ExecutionException e) {
       log.warn(
           String.format(
               "No HTML-file was found for message %s, no message will be shown", motd.id));
       return Response.none();
     }
-
     return Response.ok(motd);
+  }
+
+  private void loadFromProject() {
+    String projectName = gerritCfg.getString(pluginName, SECTION_PROJECT, KEY_NAME);
+    String pluginCfg =
+        MoreObjects.firstNonNull(
+            gerritCfg.getString(pluginName, SECTION_PROJECT, KEY_CFG), pluginCfgName);
+    if (projectName != null) {
+      project = Project.NameKey.parse(projectName);
+      BranchNameKey branch =
+          BranchNameKey.create(
+              project,
+              MoreObjects.firstNonNull(
+                  gerritCfg.getString(pluginName, SECTION_PROJECT, KEY_BRANCH),
+                  "refs/heads/master"));
+      VersionedMotdConfig versionedMtodCfg = new VersionedMotdConfig(branch, pluginCfg);
+      try (Repository repository = repoManager.openRepository(project)) {
+        branchObjId = repository.exactRef(branch.branch()).getObjectId();
+        versionedMtodCfg.load(project, repository, branchObjId);
+        mtodCfg = versionedMtodCfg.cfg;
+      } catch (IOException | ConfigInvalidException e) {
+        log.warn(
+            String.format(
+                "Unable to use project %s config. Falling back to data dir. " + "Reason: %s",
+                projectName, e.getMessage()));
+      }
+    }
+  }
+
+  static class VersionedMotdConfig extends VersionedMetaData {
+    protected final BranchNameKey branch;
+    protected final String fileName;
+    protected Config cfg;
+
+    public VersionedMotdConfig(BranchNameKey branch, String fileName) {
+      this.branch = branch;
+      this.fileName = fileName;
+    }
+
+    @Override
+    protected String getRefName() {
+      return branch.branch();
+    }
+
+    @Override
+    protected void onLoad() throws IOException, ConfigInvalidException {
+      cfg = readConfig(fileName);
+    }
+
+    @Override
+    protected boolean onSave(CommitBuilder commit) throws IOException, ConfigInvalidException {
+      return false;
+    }
+
+    public Config get() {
+      if (cfg == null) {
+        cfg = new Config();
+      }
+      return cfg;
+    }
   }
 }
